Create NativeCallTest